--- a/templates/index.html
+++ b/templates/index.html
@@ -143,7 +143,7 @@
         </div>
 
         <footer>
-            <p>💡 ZucIt - Visualisation des effets économiques "qui ne se voient pas" (F. Hayek)</p>
+            <p>💡 ZucIt - Visualisation des effets économiques "qui ne se voient pas" (F. Bastiat)</p>
         </footer>
     </div>
 
