--- a/templates/index.html
+++ b/templates/index.html
@@ -66,7 +66,7 @@
                         </div>
 
                         <div class="form-group">
-                            <label for="growth-rate">Taux de croissance (% annuel):</label>
+                            <label for="growth-rate">Taux de croissance:</label>
                             <input type="number" id="growth-rate" value="8" step="0.1" min="0" max="50" required>
                             <small>Croissance annuelle attendue</small>
                         </div>
